# h0rv.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Makefile  README  README.md  a-letter-to-zuck.html  buquet.html  config.py  config.toml  config.yaml  css.py  digital-minimalism-as-a-software-engineer.html  gen.py  generate.py  generate_about.py  generate_blogs.py  generate_index.py  generate_library.py  hacking-kobo-clara-hd.html  html_utils.py  index.html  index.json  index.xml  library.html  main.py  media-list.html  mediashelf.html  meditations.html  minify.py  my-first-tech-conference.html  my-llm-toolbox.html  philly.html  pyproject.toml  qo.html  scripts.js  sitemap.xml  styles.css  styles.css.map  (+2 more)
.github/workflows/: gh-pages.yml
about/: index.html
blog/: a-letter-to-zuck.html  hacking-kobo-clara-hd.html  index.html  my-llm-toolbox.html  value-imperialism-in-ai.html  wireheads-are-coming.html
blogs/: a-letter-to-zuck.html  hacking-kobo-clara-hd.html  index.html  my-llm-toolbox.html  test.html  value-imperialism-in-ai.html  wireheads-are-coming.html
board/: index.html
categories/: index.html  index.xml
content/: _index.md  about.md  board.md  index.md  library.md  media-list.md  mediashelf.md
content/blog/: a-letter-to-zuck.md  a-year-in-the-triangle.md  best-phone-for-digital-minimalism.md  buquet.md  hacking-kobo-clara-hd.md  llmsecops.md  (+11 more)
mediashelf/: index.html
posts/: index.html  index.xml
resume/: index.html  resume.css  resume.html  resume.md
series/: index.html  index.xml
static/: sakura-vader.css  style.css
tags/: index.html  index.xml
(+91 files in other folders)
